[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyboiler_anonoei"
version = "0.0.1"
authors = [
    {name = "Anonoei", email="dev@anonoei.com"}
]
description = "Various generic python helpers so I don't keep rewriting them"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/anonoei/pyboiler"
Issues = "https://github.com/anonoei/pyboiler/issues"
