[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyboiler_anonoei"
version = "0.0.1"
dependencies = []
requires-python = ">=3.6"
authors = [
    {name = "Anonoei", email="dev@anonoei.com"}
]
description = "Various generic python helpers so I don't keep rewriting them"
readme = "README.md"
keywords = ["anonoei", "boilerplate"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/anonoei/pyboiler"
Issues = "https://github.com/anonoei/pyboiler/issues"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/pyboiler/__init__.py" = ["{version}"]
